force-app/main/default/objects/Account/fields/PMC_SS_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Segmentation__c</fullName>
    <description>Segmentation the Customer belongs to</description>
    <label>Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>03</fullName>
                <label>03 - Trading</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>04 - Mega Farmer</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>05 - Cooperativa</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>06 - Revenda</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>07 - End User</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>08 – Strategic Ultra</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>09 – Strategic Prime</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12 - Strategic</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>13 - Core</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>14 - Base</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>A - Customer</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>B - Customer</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>C - Customer</label>
            </value>
            <value>
                <fullName>10</fullName>
                <isActive>false</isActive>
                <label>10 - Canal - KAM</label>
            </value>
            <value>
                <fullName>11</fullName>
                <isActive>false</isActive>
                <label>11 - Trader - KAM</label>
            </value>
            <value>
                <fullName>8 - Canal - Ultra</fullName>
                <isActive>false</isActive>
                <label>8 - Canal - Ultra</label>
            </value>
            <value>
                <fullName>Canal KAM</fullName>
                <isActive>false</isActive>
                <label>Canal KAM</label>
            </value>
            <value>
                <fullName>Basic</fullName>
                <isActive>false</isActive>
                <label>Canal-Basic/Grow</label>
            </value>
            <value>
                <fullName>Core</fullName>
                <isActive>false</isActive>
                <label>Core</label>
            </value>
            <value>
                <fullName>Farmers</fullName>
                <isActive>false</isActive>
                <label>Farmers</label>
            </value>
            <value>
                <fullName>Grow</fullName>
                <isActive>false</isActive>
                <label>Grow</label>
            </value>
            <value>
                <fullName>Key</fullName>
                <isActive>false</isActive>
                <label>Key</label>
            </value>
            <value>
                <fullName>Mega Farmer KAM</fullName>
                <isActive>false</isActive>
                <label>Mega Farmer KAM</label>
            </value>
            <value>
                <fullName>Mega Farmers</fullName>
                <isActive>false</isActive>
                <label>Mega Farmers</label>
            </value>
            <value>
                <fullName>Mid Farmers</fullName>
                <isActive>false</isActive>
                <label>Mid Farmers</label>
            </value>
            <value>
                <fullName>Prime</fullName>
                <isActive>false</isActive>
                <label>Prime</label>
            </value>
            <value>
                <fullName>Small Farmers</fullName>
                <isActive>false</isActive>
                <label>Small Farmers</label>
            </value>
            <value>
                <fullName>Strategic</fullName>
                <isActive>false</isActive>
                <label>Strategic</label>
            </value>
            <value>
                <fullName>Top Farmers</fullName>
                <isActive>false</isActive>
                <label>Top Farmers</label>
            </value>
            <value>
                <fullName>Trader KAM</fullName>
                <isActive>false</isActive>
                <label>Trader KAM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>