force-app/main/default/objects/Account/fields/PMC_SS_StateRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_StateRegistrationNumber__c</fullName>
    <description>States the State Registration Number</description>
    <label>State Registration Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>