force-app/main/default/objects/Account/fields/PMC_SS_StrengthsPlan__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_StrengthsPlan__c</fullName>
    <description>Strengths of the Account.</description>
    <label>Strengths (Plan)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>