force-app/main/default/objects/Account/fields/PMC_SS_TaxIDOrCNPJOrCPF__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_TaxIDOrCNPJOrCPF__c</fullName>
    <description>States the Tax ID Number</description>
    <label>Tax ID or CNPJ or SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>