force-app/main/default/objects/Account/fields/PMC_SS_Transportation_Zone__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Transportation_Zone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transportation Zone</label>
    <referenceTo>PMC_SS_Transportation__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>