force-app/main/default/objects/Account/fields/PMC_SS_TransportationZone__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_TransportationZone__c</fullName>
    <description>Truck= State + The first 7 letters of the city.

Rail = Ask the customer for the &quot;rail siding&quot;</description>
    <inlineHelpText>*Please use SAP t-code OVR1</inlineHelpText>
    <label>Transportation Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>