force-app/main/default/objects/Account/fields/PMC_SS_Underdeltolerance__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Underdeltolerance__c</fullName>
    <defaultValue>(0.99)</defaultValue>
    <label>Underdel. Tolerance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>