force-app/main/default/objects/Account/fields/Sales_Group__c.field-meta.xml
<CustomField>
    <fullName>Sales_Group__c</fullName>
    <description>Sales Group</description>
    <label>Sales Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PMC_SS_SalesOffice__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sales_Group_Global</valueSetName>
    </valueSet>
</CustomField>