force-app/main/default/objects/Account/fields/Sales_Region_Attribute_7__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region_Attribute_7__c</fullName>
    <label>Sales Region – Attribute 7</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>07A</fullName>
                <label>07A – Attribute 07A</label>
            </value>
            <value>
                <fullName>08B</fullName>
                <label>08B – Attribute 07B</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10 – DOM</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11 - Export</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>