force-app/main/default/objects/Account/fields/ShipToFormula__c.field-meta.xml
<CustomField>
    <fullName>ShipToFormula__c</fullName>
    <formula>Name &amp; &quot;-&quot; &amp; BillingCity &amp; &quot;, &quot; &amp; IF (ISPICKVAL (BillingStateCode, &quot;&quot;), &quot;&quot;, TEXT(BillingStateCode)) &amp; &quot; &quot; &amp; BillingStreet &amp; &quot;, &quot; &amp; BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShipToFormula</label>
    <type>Text</type>
</CustomField>