force-app/main/default/objects/Account/fields/Sold_to_Related_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Sold_to_Related_Partner_Name__c</fullName>
    <formula>PMC_SS_SoldToAccount__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold-to Related Partner Name</label>
    <type>Text</type>
</CustomField>