force-app/main/default/objects/Account/fields/TSM_Manager__c.field-meta.xml
<CustomField>
    <fullName>TSM_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RSM Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (TSM Manager)</relationshipLabel>
    <relationshipName>ContactsTSMManager</relationshipName>
    <type>Lookup</type>
</CustomField>