force-app/main/default/objects/Account/fields/TzoneName__c.field-meta.xml
<CustomField>
    <fullName>TzoneName__c</fullName>
    <formula>PMC_SS_Transportation_Zone__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TzoneName</label>
    <type>Text</type>
</CustomField>