force-app/main/default/objects/Account/recordTypes/PMC_SS_Agent.recordType-meta.xml
<RecordType>
    <fullName>PMC_SS_Agent</fullName>
    <active>true</active>
    <description>This record type will be used to create Account records of Agent record types</description>
    <label>Agent</label>
</RecordType>