force-app/main/default/objects/Account/recordTypes/PMC_SS_Customer.recordType-meta.xml
<RecordType>
    <fullName>PMC_SS_Customer</fullName>
    <active>true</active>
    <description>This record type will be used to create Account records of Customer record types</description>
    <label>Customer</label>
</RecordType>