force-app/main/default/objects/Account/recordTypes/PMC_SS_Prospect.recordType-meta.xml
<RecordType>
    <fullName>PMC_SS_Prospect</fullName>
    <active>true</active>
    <description>This record type will be used to create Account records of Prospect record types</description>
    <label>Prospect</label>
</RecordType>