force-app/main/default/objects/Account/recordTypes/Retailer.recordType-meta.xml
<RecordType>
    <fullName>Retailer</fullName>
    <active>true</active>
    <description>This record type will be used to create Account records of Retailer record types</description>
    <label>Retailer</label>
</RecordType>