force-app/main/default/objects/Account/recordTypes/Ship_to_Customer_Legacy.recordType-meta.xml
<RecordType>
    <fullName>Ship_to_Customer_Legacy</fullName>
    <active>false</active>
    <description>Record Type for the Legacy Ship to - Transition</description>
    <label>Ship-to Customer Legacy</label>
</RecordType>