force-app/main/default/objects/Account/recordTypes/Z002.recordType-meta.xml
<RecordType>
    <fullName>Z002</fullName>
    <active>true</active>
    <description>Create a ship-to customer to register a customer to receive goods (where the goods will be delivered)</description>
    <label>Ship-to Customer</label>
</RecordType>