force-app/main/default/objects/Account/validationRules/PMC_SS_BlockEditCPF.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_BlockEditCPF</fullName>
    <active>true</active>
    <description>Prevents that any user other than team members of Master data and System Administrator edit the field value</description>
    <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;Administrador do sistema&apos;,
$Profile.Name &lt;&gt; &apos;API Only profile&apos;,
NOT(CONTAINS($Profile.Name, &quot;Master Data&quot;)),
ISCHANGED(PMC_SS_CPF__c)
)</errorConditionFormula>
    <errorDisplayField>PMC_SS_CPF__c</errorDisplayField>
    <errorMessage>Only Master Data or System Administrator team members can edit this field</errorMessage>
</ValidationRule>