force-app/main/default/objects/Account/validationRules/PMC_SS_BlockEditShippingConditions.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_BlockEditShippingConditions</fullName>
    <active>true</active>
    <description>Prevents that any user other than team members of Master data and System Administrator edit the field value</description>
    <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;Administrador do sistema&apos;,
$Profile.Name &lt;&gt; &apos;API Only profile&apos;,
NOT(CONTAINS($Profile.Name, &quot;Master Data&quot;)),
NOT(CONTAINS($Profile.Name, &quot;Sales User&quot;)),
NOT(CONTAINS($Profile.Name, &quot;Service User&quot;)),
ISCHANGED(Industry),
ISPICKVAL($User.UserType, &quot;Standard&quot;),
OR(
ISPICKVAL(BillingCountryCode , &quot;BR&quot;),
ISPICKVAL(BillingCountryCode , &quot;PY&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>PMC_SS_ShippingCondition__c</errorDisplayField>
    <errorMessage>Shipping Conditions - Only Master Data or System Administrator team members can edit this field</errorMessage>
</ValidationRule>