force-app/main/default/objects/Account/validationRules/PMC_SS_BlockEditTransportationZone.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_BlockEditTransportationZone</fullName>
    <active>true</active>
    <description>Prevents that any user other than team members of Master data and System Administrator edit the field value</description>
    <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;Administrador do sistema&apos;,
$Profile.Name &lt;&gt; &apos;Sales User&apos;,
$Profile.Name &lt;&gt; &apos;Service User&apos;,
$Profile.Name &lt;&gt; &apos;API Only profile&apos;,
NOT(CONTAINS($Profile.Name, &quot;Master Data&quot;)),
ISCHANGED( PMC_SS_Transportation_Zone__c ),
    ISPICKVAL($User.UserType, &quot;Standard&quot;),
NOT(ISPICKVAL(Type, &quot;Sold-to&quot;))
)</errorConditionFormula>
    <errorDisplayField>PMC_SS_TransportationZone__c</errorDisplayField>
    <errorMessage>Transportation Zone - Only Master Data or System Administrator team members can edit this field</errorMessage>
</ValidationRule>