force-app/main/default/objects/Account/validationRules/PMC_SS_PreventLettersDomBroker.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_PreventLettersDomBroker</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Domestic_Broker_Text__c)),
  NOT(REGEX(Domestic_Broker_Text__c, &quot;^[0-9]*$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Domestic_Broker_Text__c</errorDisplayField>
    <errorMessage>Provide only numbers for Domestic Broker</errorMessage>
</ValidationRule>