force-app/main/default/objects/Account/validationRules/PMC_SS_PreventLettersDomBroker2.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_PreventLettersDomBroker2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;Administrador do sistema&apos;,
$Profile.Name &lt;&gt; &apos;API Only profile&apos;,
AND(
  NOT(REGEX(Domestic_Broker_2__c , &quot;^[0-9]*$&quot;))
)
)</errorConditionFormula>
    <errorDisplayField>Domestic_Broker_2__c</errorDisplayField>
    <errorMessage>Provide only numbers for Domestic Broker 2</errorMessage>
</ValidationRule>