force-app/main/default/objects/Account/validationRules/PMC_SS_ValidateAddressCityLenght.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_ValidateAddressCityLenght</fullName>
    <active>true</active>
    <description>Validate Account Address City lenght is not longer than 40 characters</description>
    <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;Administrador do sistema&apos;,
$Profile.Name &lt;&gt; &apos;API Only profile&apos;,
NOT(CONTAINS($Profile.Name, &quot;Master Data&quot;)),
LEN( BillingCity ) &gt; 40
)</errorConditionFormula>
    <errorDisplayField>BillingCity</errorDisplayField>
    <errorMessage>City Name should not exceed 40 characters.</errorMessage>
</ValidationRule>