force-app/main/default/objects/Account/validationRules/PMC_SS_ValidateAddressFieldsPopulated.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_ValidateAddressFieldsPopulated</fullName>
    <active>false</active>
    <description>Validate Account Address Fields are populated</description>
    <errorConditionFormula>AND(
NOT(
$Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c
),
OR(
OR
(
ISBLANK( BillingStreet ),
ISBLANK( BillingCountry ),
ISBLANK( BillingCity ),
ISBLANK( BillingState ),
ISBLANK( BillingPostalCode )
)
)
)</errorConditionFormula>
    <errorMessage>Please fill all Address Fields</errorMessage>
</ValidationRule>