force-app/main/default/objects/Account/validationRules/PMC_SS_ValidateAddressStatePupuated.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_ValidateAddressStatePupuated</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(  BillingStateCode , &quot;&quot;), ISPICKVAL(Type, &quot;Sold-to&quot;))</errorConditionFormula>
    <errorDisplayField>BillingStateCode</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>