force-app/main/default/objects/Account/validationRules/PMC_SS_ValidateAddressStreetLenght.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_ValidateAddressStreetLenght</fullName>
    <active>true</active>
    <description>Validate Account Address Street lenght is not longer than 60 characters</description>
    <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;Administrador do sistema&apos;,
$Profile.Name &lt;&gt; &apos;API Only profile&apos;,
NOT(CONTAINS($Profile.Name, &quot;Master Data&quot;)),
LEN( BillingStreet ) &gt; 60
)</errorConditionFormula>
    <errorDisplayField>BillingStreet</errorDisplayField>
    <errorMessage>Address Street should not exceed 60 characters.</errorMessage>
</ValidationRule>