force-app/main/default/objects/Account/validationRules/PMC_SS_ValidateAgentAccountParent.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_ValidateAgentAccountParent</fullName>
    <active>true</active>
    <description>Rule to block parent account for agent accounts.</description>
    <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;Administrador do sistema&apos;,
$Profile.Name &lt;&gt; &apos;API Only profile&apos;,
NOT(CONTAINS($Profile.Name, &quot;Master Data&quot;)),
RecordType.DeveloperName == &apos;PMC_SS_Agent&apos;,
NOT(ISBLANK( ParentId ))
)</errorConditionFormula>
    <errorDisplayField>ParentId</errorDisplayField>
    <errorMessage>Agent accounts are standalone accounts and cannot have parents</errorMessage>
</ValidationRule>