force-app/main/default/objects/Account/validationRules/PMC_SS_ValidateCNPJFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_ValidateCNPJFormat</fullName>
    <active>true</active>
    <description>Validate Account CNPJ format</description>
    <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;Administrador do sistema&apos;,
$Profile.Name &lt;&gt; &apos;API Only profile&apos;,
NOT(CONTAINS($Profile.Name, &quot;Master Data&quot;)),
ISPICKVAL( BillingCountryCode , &quot;BR&quot;),
ISPICKVAL(  PMC_SS_CustomerType__c , &quot;B2B&quot;),
!REGEX(PMC_SS_TaxIDOrCNPJOrCPF__c ,&quot;^[a-zA-Z0-9]{14}$&quot;)
)</errorConditionFormula>
    <errorDisplayField>PMC_SS_TaxIDOrCNPJOrCPF__c</errorDisplayField>
    <errorMessage>Please inform CNPJ by using only numbers  and alphabets(14 numbers and alphabets).</errorMessage>
</ValidationRule>